5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1618_2924.log
== TEST (2019-04-02 11:11:40) 
-- CODE:
intervalo de tempo = (int(input("Determine seu intervalo de tempo: ")))
posição inicial = int(input("Determine sua posição inicial (Em metros): "))
posição final = int(input("Determine sua posição fiinal (Em metros): "))
velociade do móvel = int(input("Determine a velocidade do móvel"))

vt = velociade do móvel * intervalo de tempo

-- ERROR:
File "XXXX", line 1
    intervalo de tempo = (int(input()))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:03) 
-- CODE:
intervalo_de_tempo = (int(input("Determine seu intervalo de tempo: ")))
posição inicial = int(input("Determine sua posição inicial (Em metros): "))
posição final = int(input("Determine sua posição fiinal (Em metros): "))
velociade do móvel = int(input("Determine a velocidade do móvel"))

vt = velociade do móvel * intervalo de tempo

-- ERROR:
File "XXXX", line 2
    posição inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:18) 
-- CODE:
intervalo_de_tempo = (int(input("Determine seu intervalo de tempo: ")))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_móvel = int(input("Determine a velocidade do móvel"))

vt = velociade do móvel * intervalo de tempo

-- ERROR:
File "XXXX", line 6
    vt = velociade do móvel * intervalo de tempo
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:29) 
-- CODE:
intervalo_de_tempo = (int(input("Determine seu intervalo de tempo: ")))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = velociade do móvel * intervalo de tempo

-- ERROR:
File "XXXX", line 6
    vt = velociade do móvel * intervalo de tempo
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:36) 
-- CODE:
intervalo_de_tempo = (int(input("Determine seu intervalo de tempo: ")))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = velociade do movel * intervalo de tempo

-- ERROR:
File "XXXX", line 6
    vt = velociade do movel * intervalo de tempo
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:51) 
-- CODE:
intervalo_de_tempo = (int(input("Determine seu intervalo de tempo: ")))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = (velociade do movel * intervalo de tempo)

-- ERROR:
File "XXXX", line 6
    vt = (velociade do movel * intervalo de tempo)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:09) 
-- CODE:
intervalo_de_tempo = float(input("Determine seu intervalo de tempo: ")))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = (velociade do movel * intervalo de tempo)


-- ERROR:
File "XXXX", line 1
    intervalo_de_tempo = float(input()))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:13) 
-- CODE:
intervalo_de_tempo = float(input("Determine seu intervalo de tempo: ")))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = (velociade do movel * intervalo de tempo)


-- ERROR:
File "XXXX", line 1
    intervalo_de_tempo = float(input()))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:21) 
-- CODE:
intervalo_de_tempo = float(input("Determine seu intervalo de tempo: "))
posição_inicial = int(input("Determine sua posição inicial (Em metros): "))
posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = (velociade do movel * intervalo de tempo)


-- ERROR:
File "XXXX", line 6
    vt = (velociade do movel * intervalo de tempo)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:02) 
-- CODE:
posicão inicial = int(input("Determine o valor da posição"))
posicao final = int(input("Determine o valor da posição"))
intervalo_de_tempo = float(input("Determine seu intervalo de tempo: "))

posição_final = int(input("Determine sua posição fiinal (Em metros): "))
velociade_do_movel = int(input("Determine a velocidade do móvel"))

vt = (velociade do movel * intervalo de tempo)


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:10) 
-- CODE:
posicão inicial = int(input("Determine o valor da posição"))
posicao final = int(input("Determine o valor da posição"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:12) 
-- CODE:
posicão inicial = int(input("Determine o valor da posição"))
posicao final = int(input("Determine o valor da posição"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:13) 
-- CODE:
posicão inicial = int(input("Determine o valor da posição"))
posicao final = int(input("Determine o valor da posição"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:22) 
-- CODE:
posicão_inicial = int(input("Determine o valor da posição"))
posicao_final = int(input("Determine o valor da posição"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:37) 
-- CODE:
posicão_inicial = int(input("Determine o valor da posicao"))
posicao_final = int(input("Determine o valor da posicao"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:41) 
-- CODE:
posicão_inicial = int(input("Determine o valor da posica1o"))
posicao_final = int(input("Determine o valor da posicao"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:45) 
-- CODE:
posicão_inicial = int(input("Determine o valor da posicao"))
posicao_final = int(input("Determine o valor da posicao"))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:58) 
-- CODE:
posicão_inicial = int(input("Determine o valor da posicao: "))
posicao_final = int(input("Determine o valor da posiçao: "))


-- ERROR:
File "XXXX", line 1
    posicão inicial = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:22:31) 
-- CODE:
posicão_inicial = float(input("Determine o valor da posicao: "))
posicao_final = float(input("Determine o valor da posicao: "))
velocidade_do_movel = float(input("Determine a velociade do movel"))
intervalo_de_tempo = float(input("Determine o intervalo de tempo"))

vt = (velocidade_do_movel * intervalo_de_tempo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    intervalo_de_tempo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:23:23) 
-- CODE:
posicão_inicial = float(input("Determine o valor da posicao: "))
posicao_final = float(input("Determine o valor da posicao: "))
velocidade_do_movel = float(input("Determine a velociade do movel: "))
intervalo_de_tempo = float(input("Determine o intervalo de tempo: "))

vt = (velocidade_do_movel * intervalo_de_tempo)
print(vt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    intervalo_de_tempo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:26:06) 
-- CODE:
posicao_final = float(input("Determine o valor da posicao: "))
velocidade_do_movel = float(input("Determine a velociade do movel: "))
intervalo_de_tempo = float(input("Determine o intervalo de tempo: "))


posição_inicial = posição_final + (velocidade_do_móvel * intervalo_de_tempo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    posição_inicial = posição_final + (velocidade_do_móvel * intervalo_de_tempo)
NameError: name 'posição_final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:26:51) 
-- CODE:
posicao_final = float(input("Determine o valor da posicao: "))
velocidade_do_movel = float(input("Determine a velociade do movel: "))
intervalo_de_tempo = float(input("Determine o intervalo de tempo: "))


posicao_inicial = (posicao_final + (velocidade_do_movel * intervalo_de_tempo))
print(posicao_inicial)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:26:59) 
-- CODE:
posicao_final = float(input("Determine o valor da posicao: "))
velocidade_do_movel = float(input("Determine a velociade do movel: "))
intervalo_de_tempo = float(input("Determine o intervalo de tempo: "))


posicao_inicial = (posicao_final + (velocidade_do_movel * intervalo_de_tempo))
print(posicao_inicial)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:27:20) 
-- CODE:
posicao_final = float(input("Determine o valor da posicao: "))
velocidade_do_movel = float(input("Determine a velociade do movel: "))
intervalo_de_tempo = float(input("Determine o intervalo de tempo: "))


posicao_inicial = (posicao_final + (velocidade_do_movel * intervalo_de_tempo))
print(posicao_inicial)
-- EXECUTION TIME:
0.217254
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002.0
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252.0
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
